tests/dataset/tpc-h/compiler/c/q17.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:20Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:20Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static double _avg(list_int v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static char *brand = "Brand#23";
static char *container = "MED BOX";

typedef struct {
  int p_partkey;
  const char *p_brand;
  const char *p_container;
} part_t;
typedef struct {
  int len;
  part_t *data;
} part_list_t;
part_list_t create_part_list(int len) {
  part_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(part_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int l_partkey;
  int l_quantity;
  double l_extendedprice;
} lineitem_t;
typedef struct {
  int len;
  lineitem_t *data;
} lineitem_list_t;
lineitem_list_t create_lineitem_list(int len) {
  lineitem_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(lineitem_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static int
    test_Q17_returns_average_yearly_revenue_for_small_quantity_orders_expected;
static double
    test_Q17_returns_average_yearly_revenue_for_small_quantity_orders_result;
static void
test_Q17_returns_average_yearly_revenue_for_small_quantity_orders() {
  double expected = 100.0 / 7.0;
  if (!(test_Q17_returns_average_yearly_revenue_for_small_quantity_orders_result ==
        test_Q17_returns_average_yearly_revenue_for_small_quantity_orders_expected)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  part_t part[] = {
      (part_t){.p_partkey = 1, .p_brand = "Brand#23", .p_container = "MED BOX"},
      (part_t){.p_partkey = 2, .p_brand = "Brand#77", .p_container = "LG JAR"}};
  int part_len = sizeof(part) / sizeof(part[0]);
  lineitem_t lineitem[] = {
      (lineitem_t){.l_partkey = 1, .l_quantity = 1, .l_extendedprice = 100.0},
      (lineitem_t){.l_partkey = 1, .l_quantity = 10, .l_extendedprice = 1000.0},
      (lineitem_t){.l_partkey = 1, .l_quantity = 20, .l_extendedprice = 2000.0},
      (lineitem_t){.l_partkey = 2, .l_quantity = 5, .l_extendedprice = 500.0}};
  int lineitem_len = sizeof(lineitem) / sizeof(lineitem[0]);
  list_int tmp1 = list_int_create(lineitem_len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < lineitem_len; tmp3++) {
    lineitem_t x = lineitem[tmp3];
    if (!(x.l_partkey == p.p_partkey)) {
      continue;
    }
    tmp1.data[tmp2] = x.l_quantity;
    tmp2++;
  }
  tmp1.len = tmp2;
  list_float tmp4 = list_float_create(lineitem.len * part.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < lineitem_len; tmp6++) {
    lineitem_t l = lineitem[tmp6];
    for (int tmp7 = 0; tmp7 < part_len; tmp7++) {
      part_t p = part[tmp7];
      if (!(p.p_partkey == l.l_partkey)) {
        continue;
      }
      if (!((((strcmp(p.p_brand, brand) == 0)) &&
             ((strcmp(p.p_container, container) == 0)) &&
             (l.l_quantity < (0.2 * _avg(tmp1)))))) {
        continue;
      }
      tmp4.data[tmp5] = l.l_extendedprice;
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  list_float filtered = tmp4;
  double result = _sum_float(filtered) / 7.0;
  _json_float(result);
  test_Q17_returns_average_yearly_revenue_for_small_quantity_orders_expected =
      expected;
  test_Q17_returns_average_yearly_revenue_for_small_quantity_orders_result =
      result;
  test_Q17_returns_average_yearly_revenue_for_small_quantity_orders();
  free(tmp1.data);
  return 0;
}
